# FenceyMD

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEBUG.md  DEVLOOP.md  PLAN.md  README.md  ROADMAP.md  SECURITY.md  SNAPSHOT.md  STRUCTURE.md  THIRD-PARTY-LICENSES.csv  THIRD-PARTY-LICENSES.md  check-page.mjs  design.md  e2e-test.mjs  index.html  package-lock.json  package.json  vite.config.js
.archive/: README.md  stash-pre-rebrand-2026-06-10.patch
.github/workflows/: ci.yml  ci.yml.disabled
demo/: 00-welcome.md  01-reading.md  02-navigation.md  03-editing.md  04-html.md  05-svg.md  06-slides.md  07-mermaid.md  08-excalidraw.md  09-pdf.md  10-math.md  11-code.md  12-csv.md  13-agent-control.md  README.md
demo/output/: README.md
docs/: AGENT_REGISTRATION.md  CODE-REVIEW.md  HANDOFF.md  MCP_SETUP.md  STATUS.md
for_dev/: feature_agent_registration.md  feature_anchors.md  feature_autosave.md  feature_cli_install.md  feature_code_highlight.md  feature_cross_chapter_search.md  feature_csv.md  feature_diagram_export.md  feature_editor.md  feature_excalidraw.md  feature_external_editor.md  feature_file_watcher.md  feature_find_replace.md  feature_folder_as_a_book.md  feature_html_fence.md  feature_image_paste.md  feature_in_chapter_find.md  feature_library.md  feature_markdown_pipeline.md  feature_math.md  feature_mcp_capture_screenshot.md  feature_mcp_debug_log.md  feature_mcp_open_file.md  feature_mcp_server.md  feature_mermaid.md  feature_outline_pane.md  feature_paragraph_tracking.md  feature_pdf_export.md  feature_progress_and_bookmarks.md  feature_reader.md  feature_rebrand_state_migration.md  feature_reopen_last.md  feature_sanitization.md  feature_settings.md  feature_sidebar.md  feature_slide_view.md  feature_snapshot.md  feature_svg_fence.md  feature_theme.md  index.md  (+1 more)
scripts/: build-linux.sh  build-windows.ps1  docker-build-linux.sh  gen-licenses.mjs
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: snapshot_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  cli.rs  main.rs  mcp.rs  pdf.rs
src-tauri/tests/: bridge.rs
src/components/: CrossSearchPanel.svelte  Editor.svelte  ExcalidrawViewer.svelte  Library.svelte  OutlinePane.svelte  Picker.svelte  Reader.svelte  Settings.svelte  Sidebar.svelte  SidebarTree.svelte  SlideViewer.svelte  TreeNode.svelte  ZoomOverlay.svelte  zoom-state.js  zoomable.js
src/lib/: anchors.js  cross-search.js  debug-log.js  diagram-export.js  index.js  link-resolver.js  markdown.js  registry.js  sanitize.js  slides.js  stores.js  tauri.js
src/lib/renderers/: csv.js  excalidraw.js  html.js  index.js  manifest.json  math.js  mermaid.js  shiki.js  svg.js
src/lib/stores/: files.js  library.js  prefs.js  progress.js  state.js
ui/: index.html
