[package]
name = "md-reader"
version = "1.0.0"
description = "A local Markdown book reader"
authors = ["Alan Nguyen"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
walkdir = "2"
notify = "6"
notify-debouncer-mini = "0.4"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
# Cross-platform screen capture. Used to snapshot the app's own window
# onto the system clipboard (no screen-recording permission needed for
# self-capture). On macOS this goes through CGWindowListCreateImage;
# on Linux via X11/Wayland; on Windows via DXGI.
xcap = "0.9"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
